# createadmin

./: .gitignore  LICENSE  README.rst  setup.cfg
createadmin/management/commands/: createadmin.py
