[metadata]
name = createadmin
version = 1.0
author = xB0t
author_email = ychaudhari124@gmail.com
maintainer = xB0t
maintainer_email = ychaudhari124@gmail.com
description = Create Default Admin Credentials in Django Admin.
long_description = file:README.rst
url = https://github.com/xB0t/createadmin
license = MIT
keywords = django django_admin django_admin_default_credentials django-admin-custom-credentials devops deployment
classifiers =
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data=true
packages = find:
